# donat

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.conformance.yml
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs
crates/conformance/: Cargo.toml  PORTING.md  README.md
crates/conformance/fixtures/: README.md
crates/conformance/fixtures/jwt_keys/: README.md  ed25519_private.pem  ed25519_public.pem  es256_private.pem  es256_public.pem  rsa_jwk.json  rsa_private.pem  rsa_public.pem
crates/conformance/fixtures/mcp/: accept_missing_sse_rejected.yaml  accept_sse_q_zero_rejected.yaml  configured_empty_tools_call.yaml  configured_empty_tools_list.yaml  delete.yaml  delete_empty_where_rejected.yaml  delete_origin_remote_method_not_allowed.yaml  delete_origin_remote_rejected.yaml  delete_where_hidden_column_rejected.yaml  delete_where_key_injection_rejected.yaml  delete_where_sql_injection_safe.yaml  delete_without_permission_rejected.yaml  describe_table.yaml  describe_table_denied.yaml  describe_table_empty_table_rejected.yaml  describe_table_inherited.yaml  describe_table_injection_rejected.yaml  describe_table_limited.yaml  describe_table_restricted.yaml  describe_table_unknown_table_rejected.yaml  get_origin_remote_method_not_allowed.yaml  get_origin_remote_rejected.yaml  host_remote_accepted.yaml  host_remote_rejected.yaml  id_null_rejected.yaml  id_object_rejected.yaml  initialize.yaml  initialize_client_info_invalid_rejected.yaml  initialize_client_info_too_long_rejected.yaml  initialize_meta_progress_token_invalid_rejected.yaml  initialize_missing_params_rejected.yaml  initialize_unknown_param_rejected.yaml  initialize_with_meta.yaml  insert.yaml  insert_column_key_injection_rejected.yaml  insert_default_affected_rows_only.yaml  insert_duplicate_returning_rejected.yaml  insert_empty_object_rejected.yaml  insert_hidden_column_rejected.yaml  insert_returning_injection_rejected.yaml  (+81 more)
crates/conformance/fixtures/remote_stub/: secondary_remote_schema_perms.introspection.json  secondary_remote_schema_perms_error.introspection.json
crates/conformance/fixtures/rest/: create_pet.yaml  create_pet_string_id.yaml  get_pet_by_id.yaml  get_pet_featured.yaml  list_pets_limit.yaml  method_not_allowed.yaml  setup.yaml  teardown.yaml  unknown_endpoint.yaml
crates/conformance/fixtures/tandt_clickhouse/: manifest.json  setup.json
crates/conformance/src/: action_webhook.rs  cron_webhook.rs  lib.rs  remote_graphql.rs
crates/conformance/tests/: actions.rs  agg_relay_introspection.rs  auth_env.rs  backend_matrix.rs  clickhouse.rs  clickhouse_multi_database.rs  cron_triggers.rs  enabled_apis.rs  event_triggers.rs  graphql_mutations.rs  graphql_queries.rs  introspection_descriptions.rs  jwk.rs  jwt.rs  mcp_tools.rs  migrate.rs  multi_source.rs  remote_schemas.rs  rest_endpoints.rs  roles_inheritance.rs  security.rs  subscriptions.rs  tandt_clickhouse_contract.rs  v1_queries.rs
crates/conformance/tests/support/: remote_stub.rs
crates/server/: Cargo.toml
crates/server/src/: action.rs  codegen.rs  cron.rs  events.rs  gql.rs  jwt.rs  lib.rs  main.rs  mcp.rs  migrate.rs  ops.rs  remote.rs  remote_validate.rs  rest.rs  state.rs  ws.rs
crates/server/src/snapshots/: donat__codegen__tests__array_columns_become_slices.snap  donat__codegen__tests__enum_types_emit_alias_and_consts.snap  donat__codegen__tests__multi_schema_tables_disambiguated.snap  donat__codegen__tests__nullable_columns_become_pointers.snap  donat__codegen__tests__scalars_all_types.snap  donat__codegen__tests__scalars_basic.snap
crates/server/tests/: clickhouse_runtime.rs  multi_source_runtime.rs  mysql_e2e.rs  mysql_mutations.rs  mysql_runtime.rs  sqlite_e2e.rs  sqlite_mutations.rs  sqlite_runtime.rs  tandt_clickhouse_contract.rs
crates/server/tests/fixtures/: tandt_clickhouse_metadata.json  tandt_clickhouse_queries.graphql
crates/sqlgen/: Cargo.toml
crates/sqlgen/src/: lib.rs
crates/sqlgen/tests/: escaping.rs  ir_unit.rs  pipeline.rs
crates/sqlgen/tests/snapshots/: ir_unit__aggregate_column_guard_wraps_case.snap  ir_unit__by_pk_single_select_is_one_scalar_subquery.snap  ir_unit__guarded_column_renders_case_when.snap  ir_unit__insert_check_expression_wraps_check_violation.snap  ir_unit__insert_missing_values_render_default_and_do_nothing.snap  ir_unit__on_conflict_do_update_applies_filter_and_presets.snap  ir_unit__update_check_expression_wraps_check_violation.snap  pipeline__distinct_on_columns_lead_order_by.snap
crates/wasm-core/: Cargo.toml
crates/wasm-core/src/: compile.rs  lib.rs  plan.rs
crates/wasm-core/tests/: plan_snapshots.rs
crates/wasm-core/tests/snapshots/: plan_snapshots__mutation_emits_event_hook.snap  plan_snapshots__mutation_plan_v1.snap  plan_snapshots__permission_error_plan_v1.snap  plan_snapshots__query_plan_v1.snap  plan_snapshots__query_plan_v1_sqlite.snap
(+455 files in other folders)
