[package]
name = "donat-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Postgres introspection: tables, columns, types, PKs and FKs from pg_catalog"

[dependencies]
serde = { workspace = true }
tokio-postgres = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
mysql = { version = "28", default-features = false, features = ["minimal-rust"] }
