[package]
name = "donat-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native conformance harness: Donat-derived fixtures executed against donat"

[dependencies]
anyhow = { workspace = true }
donat-backend = { path = "../backend" }
donat-metadata = { path = "../metadata" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
mysql = { version = "28", default-features = false, features = ["minimal-rust"] }
tungstenite = { workspace = true }
postgres = { workspace = true }
graphql-parser = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
