[package]
name = "donat-sqlgen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IR -> single Postgres SQL query producing the JSON response shape"

[dependencies]
donat-ir = { path = "../ir" }
donat-backend = { path = "../backend" }
serde_json = { workspace = true }

[dev-dependencies]
donat-metadata = { path = "../metadata" }
donat-catalog = { path = "../catalog" }
donat-schema = { path = "../schema" }
graphql-parser = { workspace = true }
insta = { workspace = true }
